Eurotherm web fix

--- a/apache.conf
+++ b/apache.conf
@@ -2,12 +2,20 @@
 <VirtualHost *:80>
 	ServerAdmin r.secchi@gmail.com 
 	DocumentRoot /usr/local/src/eurotherm/www
+	<Directory /usr/local/src/eurotherm/www>
+		Require all granted
+	</Directory>
+	
 
 	Alias /output/ /var/spool/eurotherm/
+	<Directory /var/spool/eurotherm>
+		Require all granted
+	</Directory>
 
-	ScriptAlias /cgi-bin/ /usr/local/src/eurotherm/cgi-bin/
-	<Directory /var/www/cgi-bin>
+	ScriptAlias /cgi-bin/ /usr/local/src/eurotherm/www/cgi-bin/
+	<Directory /usr/local/src/eurotherm/www/cgi-bin>
 		Options ExecCGI 
+		Require all granted
 		SetHandler cgi-script
 	</Directory>
 
