Corrected branch in Dockerfile

--- a/Docker/Dockerfile.prod
+++ b/Docker/Dockerfile.prod
@@ -1,4 +1,4 @@
 FROM eurotherm:devel
 
 RUN cd /usr/local/src/ && apt-get update && apt-get install -y git \
-    && git clone https://github.com/rsecchi/eurotherm.git
+    && git clone -b frame https://github.com/rsecchi/eurotherm.git
