Changing Docker configuration

--- a/Docker/httpd.conf
+++ b/Docker/httpd.conf
@@ -549,13 +549,12 @@ SSLRandomSeed connect builtin
 
 ########### Eurotherm Server configuration #########
 
-Listen 8081
 ServerName uniserver.ddns.net
-<VirtualHost *:8081>
+<VirtualHost *:80>
     ServerAdmin r.secchi@gmail.com
     DocumentRoot /usr/local/src/eurotherm/www
 
-    Alias /output/ /usr/local/src/eurotherm/spool/
+    Alias /output/ /var/spool/eurotherm/
 
     ScriptAlias /cgi-bin/ /usr/local/src/eurotherm/www/cgi-bin/
     #<Directory /var/www/cgi-bin>
@@ -563,10 +562,13 @@ ServerName uniserver.ddns.net
     #    SetHandler cgi-script
     #</Directory>
 
-	<Directory /usr/local/src/eurotherm >
-		Require all granted
-	</Directory>
+    <directory /usr/local/src/eurotherm >
+        require all granted
+    </directory>
 
+    <directory /var/spool/eurotherm >
+        require all granted
+    </directory>
 
     # ErrorLog ${APACHE_LOG_DIR}/error.log
     # CustomLog ${APACHE_LOG_DIR}/access.log combined
