--- a/Docker/Dockerfile.prod
+++ b/Docker/Dockerfile.prod
@@ -1,3 +1,3 @@
-FROM eurotherm:devel
+FROM raffauser/leonardoplanner:devel
 
 RUN cd /usr/local/src/ && git clone -b frame https://github.com/rsecchi/eurotherm.git
