Zipfile in testing for debugging

--- a/Docker/httpd.conf
+++ b/Docker/httpd.conf
@@ -545,9 +545,11 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 
-
-
 ########### Eurotherm Server configuration #########
+
+<IfDefine TESTING>
+    SetEnv MODE "testing"
+</IfDefine>
 
 ServerName uniserver.ddns.net
 <VirtualHost *:80>
@@ -575,6 +577,8 @@ ServerName uniserver.ddns.net
 
     Options ExecCGI Includes MultiViews Indexes SymLinksIfOwnerMatch
     AddHandler cgi-script .py .php
+
+
 
     #AddType application/x-httpd-php .html
 
