--- a/Docker/Dockerfile.devel
+++ b/Docker/Dockerfile.devel
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get -y install curl
 
 ### Add the a dynamic link to banner.png
 
-RUN apt-get update && apt-get -y install python3-full python3-ezdxf python3-openpyxl python3-docx python3-numpy
+RUN apt-get update && apt-get -y install python3-full python3-ezdxf python3-openpyxl python3-docx python3-numpy python3-matplotlib
 
 ENTRYPOINT ["/bin/bash","/usr/local/src/eurotherm/Docker/config.sh"] 
 
