--- a/Docker/Dockerfile.ver1.0
+++ b/Docker/Dockerfile.ver1.0
@@ -1,4 +1,4 @@
-FROM raffauser/leonardoplanner:ver1
+FROM raffauser/leonardoplanner:devel
 
 RUN cd /usr/local/src/ && curl -L http://github.com/rsecchi/eurotherm/archive/ver1.0-fixes.tar.gz | tar zxf - && mv eurotherm-ver1.0-fixes eurotherm
 
