--- a/Docker/Dockerfile.devel
+++ b/Docker/Dockerfile.devel
@@ -11,5 +11,6 @@ RUN apt-get update && apt-get -y install curl
 RUN apt-get update && apt-get -y install python3-full python3-ezdxf python3-openpyxl python3-docx python3-numpy python3-matplotlib
 RUN apt-get -y install libcairo2-dev
 
+WORKDIR /usr/local/src/eurotherm
 ENTRYPOINT ["/bin/bash","/usr/local/src/eurotherm/Docker/config.sh"] 
 
