Adding library file

--- a/Docker/Dockerfile.ver2.0
+++ b/Docker/Dockerfile.ver2.0
@@ -1,8 +1,7 @@
 FROM raffauser/leonardoplanner:devel
 
-RUN cd /usr/local/src/ && \
-	curl -L http://github.com/rsecchi/eurotherm/archive/main.tar.gz \
-   | tar zxf - && mv eurotherm-main eurotherm
+RUN curl -L http://github.com/rsecchi/eurotherm/archive/main.tar.gz \
+   | tar zxf - --strip-components=1  
 
 
 
